--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,11 +49,29 @@ h1, h2, h3, h4, h5, h6 {
 
 .seedInfo {
     font-family: "Work Sans";
+    text-transform: uppercase;
+    font-size: .8em;
     position: fixed;
     z-index: 1000;
-    top: 0;
-    right: 0;
+    bottom: 10px;
+    right: 20px;
+    transform: rotate(90deg);
+    transform-origin: top right;
 }
+    .seedInfo .infoButton {
+        display: inline-block;
+        position: relative;
+        padding: 0 0.25em;
+    }
+    .seedInfo .infoButton::after {
+        content: " ";
+        width: 1em;
+        height: 1em;
+        position: absolute;
+        left: 0;
+        border: 1px solid;
+        border-radius: 50%;
+    }
 
 main {
     position: relative;
