--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,13 +101,16 @@ h1, h2, h3, h4, h5, h6 {
     }
 
 main {
-    height: 100%;
+    min-height: 100vh;
     position: relative;
     z-index: 300;
+    border-right: 3px solid black;
+    width: 100%;
 }
 
 a {
     color: inherit;
+    word-break: break-all;
 }
 
 h1 {
@@ -255,14 +258,22 @@ article input[type="email"] {
 
 /** program */
 
+.hidden {
+    display: none;
+}
+
 [data-namespace="program"] main {
-    width: 500px;
+    max-width: 500px;
     /* background: linear-gradient(to right, rgba(255, 255, 255, 1) 350px, rgba(255, 255, 255, 0)) */
     /* background: white; */
 }
 
 [data-namespace="program"] .marker-icon {
     animation: fadein 2s;
+}
+
+[data-view="program"] .hidden {
+    display: none;
 }
 
 /** space */
@@ -286,6 +297,34 @@ article input[type="email"] {
     display: none;
 }
 
+[data-view="date"] .date-filter {
+    opacity: .5;
+}
+
+[data-view="date"] .date-filter:hover {
+    opacity: 1;
+}
+
+[data-view="date"] .date-filter.selected-date {
+    transform: scale(1.1);
+    background: white;
+    opacity: 1;
+}
+
+
+#loader {
+    font-weight: normal;
+    margin: 0;
+    padding: 0;
+    font-family: 'Work Sans';
+    text-transform: uppercase;
+    font-weight: 600;
+    line-height: .75em;
+    font-size: 3vw;
+    padding: 20px;
+    transition: font-size .1s linear;
+    cursor: pointer;
+}
 
 .program-header {
     font-weight: normal;
@@ -298,16 +337,17 @@ article input[type="email"] {
     font-size: 6vw;
     padding: 20px;
     transition: font-size .1s linear;
+    cursor: pointer;
 }
 
 .program-header-inline {
     font-size: 1.5em;
     padding: 0;
+    word-break: break-all;
 }
 
 .participants {
     min-height: 100%;
-    border-right: 3px solid black;
 }
 
 .participant {
@@ -351,9 +391,25 @@ article input[type="email"] {
 }
 
 .event__title {
+    position: relative;
     font-family: "Work Sans";
     text-transform: uppercase;
     font-size: 1em;
+}
+
+.event__title:not(.no-acc) {
+    cursor: pointer;
+}
+
+.event__title:not(.no-acc)::after {
+    content: "+";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.event__title:not(.no-acc).acc-open::after {
+    content: "-"
 }
 
 .event__accord {
@@ -362,10 +418,16 @@ article input[type="email"] {
     transition: max-height 0.2s ease-out;
 }
 
+.event__accord::before {
+    content: "";
+    height: 1em;
+    display: block;
+}
+
 .filters {
     position: fixed;
     right: 20px;
-    bottom: 40px;
+    bottom: 15px;
     font-family: "Work Sans";
     font-size: 8vw;
     line-height: .8em;
@@ -375,7 +437,6 @@ article input[type="email"] {
 .filter-row {
     /* filter: url('#goo'); */
     /* display: flex; */
-    margin-left: 1em;
 }
 
 .filter {
@@ -387,7 +448,7 @@ article input[type="email"] {
     cursor: pointer;
 }
 
-.filter::before {
+.date-filter:not(.date-filter-all)::before {
     content: "OCT";
     position: absolute;
     left: 50%;
@@ -405,10 +466,10 @@ article input[type="email"] {
 
 /** map */
 
-.activeArea { 
-    position: absolute;
+.activeArea {
+    position: fixed;
     width: calc(100vw - 500px);
-    height: 100%;
+    height: 100vh;
     left: 500px;
     top: 0;
 }
@@ -473,4 +534,27 @@ article input[type="email"] {
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+@media (max-width: 900px) {
+    #header {
+        display: none;
+    }
+
+    .filters {
+        position: relative;
+        text-align: left;
+        right: 0;
+        bottom: 0;
+        border-bottom: 3px solid;
+        padding: 20px;
+    }
+
+    .filter-row-dates::after {
+        content: "Oct."
+    }
+
+    .date-filter:not(.date-filter-all)::before {
+        content: "";
+    }
 }
