--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -278,14 +278,14 @@ article input[type="email"] {
 
 /** space */
 
-[data-view="space"] .participant {
+[data-view="space"] .selected-div {
     background: white;
 }
 
-[data-view="space"] .filter-row {
+/* [data-view="space"] .filter-row {
     font-size: 6vw;
     display: none;
-}
+} */
 
 [data-view="space"] .hidden {
     display: none;
@@ -307,7 +307,6 @@ article input[type="email"] {
 
 [data-view="date"] .date-filter.selected-date {
     transform: scale(1.1);
-    background: white;
     opacity: 1;
 }
 
@@ -353,12 +352,11 @@ article input[type="email"] {
 .participant {
     box-sizing: border-box;
     padding: 20px;
-    /* border-right: 3px solid; */
-    /* background: white; */
     max-width: 100%;
     width: 500px;
     font-size: 1.5em;
     border-bottom: 3px solid;
+    cursor: pointer;
 }
 
 .participant:hover {
@@ -373,6 +371,13 @@ article input[type="email"] {
     margin: 0;
     margin-top: .5em;
     /* font-family: "Work Sans"; */
+}
+
+.show-map {
+    display: none;
+    border-bottom: 3px solid;
+    font-size: 1.3em;
+    height: 20px;
 }
 
 .event {
@@ -427,16 +432,11 @@ article input[type="email"] {
 .filters {
     position: fixed;
     right: 20px;
-    bottom: 15px;
+    bottom: 10px;
     font-family: "Work Sans";
     font-size: 8vw;
     line-height: .8em;
     text-align: right;
-}
-
-.filter-row {
-    /* filter: url('#goo'); */
-    /* display: flex; */
 }
 
 .filter {
@@ -452,17 +452,29 @@ article input[type="email"] {
     content: "OCT";
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -50%);
     font-size: .3em;
 }
 
 .filter:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
-.filter-row .active {
-    transform: scale(1.2);
+/*
+
+.filters {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    font-family: "Work Sans";
+    font-size: 2em;
 }
+
+.filter {
+    display: block;
+    right: 0;
+    cursor: pointer;
+} */
 
 /** map */
 
@@ -523,12 +535,24 @@ article input[type="email"] {
     z-index: 5000;
 }
 
-.marker-icon:hover span {
-    opacity: 1;
+    .marker-icon:hover span {
+        opacity: 1;
+    }
+
+.marker-icon.selected-marker {
+    border: 3px solid black;
 }
+
+    .marker-icon.selected-marker span {
+        opacity: 1;
+    }
 
 .leaflet-marker-pane {
     filter: url('#goo')
+}
+
+.marker-hover {
+    border: 3px solid black;
 }
 
 @keyframes fadein {
@@ -537,17 +561,28 @@ article input[type="email"] {
 }
 
 @media (max-width: 900px) {
+
+    main {
+        border-right: 0;
+        min-height: 0;
+    }
+
     #header {
         display: none;
     }
 
-    .filters {
+    /* .filters {
         position: relative;
         text-align: left;
         right: 0;
         bottom: 0;
         border-bottom: 3px solid;
         padding: 20px;
+    } */
+
+    .activeArea {
+        width: 100%;
+        left: 0;
     }
 
     .filter-row-dates::after {
@@ -557,4 +592,17 @@ article input[type="email"] {
     .date-filter:not(.date-filter-all)::before {
         content: "";
     }
+
+    .participant {
+        background: white;
+    }
+
+    .participant:not(.hidden) + .show-map {
+        display: block;
+    }
+
+    [data-view="space"] .participant:not(.selected-div) {
+        display: none;
+    }
+
 }
