--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -258,6 +258,14 @@ article input[type="email"] {
 
 /** program */
 
+#header {
+    position: fixed;
+    left: 500px;
+    top: 0;
+    pointer-events: none;
+    z-index: 8000;
+}
+
 .hidden {
     display: none;
 }
@@ -298,7 +306,7 @@ article input[type="email"] {
 }
 
 [data-view="date"] .date-filter {
-    opacity: .5;
+    /* opacity: .5; */
 }
 
 [data-view="date"] .date-filter:hover {
@@ -308,6 +316,7 @@ article input[type="email"] {
 [data-view="date"] .date-filter.selected-date {
     transform: scale(1.1);
     opacity: 1;
+    background: white;
 }
 
 
@@ -347,6 +356,8 @@ article input[type="email"] {
 
 .participants {
     min-height: 100%;
+    transition: left .1s linear;
+    left: 0;
 }
 
 .participant {
@@ -476,6 +487,10 @@ article input[type="email"] {
     cursor: pointer;
 } */
 
+#list-map-toggle {
+    display: none;
+}
+
 /** map */
 
 .activeArea {
@@ -565,10 +580,29 @@ article input[type="email"] {
     main {
         border-right: 0;
         min-height: 0;
+        background: white;
     }
 
     #header {
-        display: none;
+        left: 0;
+        background: white;
+        pointer-events: all;
+        width: 100%;
+        font-size: 30px;
+        box-sizing: border-box;
+        position: relative;
+        border-bottom: 3px solid black;
+        padding: .3em;
+    }
+
+    #header br {content: ""}
+
+    .participants {
+        margin-bottom: 100px;
+        z-index: 7500;
+        position: absolute;
+        margin-bottom: 100px;
+        max-width: 100%;
     }
 
     /* .filters {
@@ -585,12 +619,52 @@ article input[type="email"] {
         left: 0;
     }
 
-    .filter-row-dates::after {
-        content: "Oct."
+    .filters {
+        z-index: 8000;
+        background: white;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-top: 3px solid black;
     }
 
-    .date-filter:not(.date-filter-all)::before {
+    .filter-row {
+        padding: .3em .3em .1em .3em;
+    }
+
+    #list-map-toggle {
+        display: block;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        font-family: "Work Sans";
+        font-size: 1.3em;
+        z-index: 9000;
+        text-transform: uppercase;
+        font-size: 8vw;
+        line-height: .8em;
+        padding: .3em .3em .1em .3em;
+    }
+
+    .list-map-toggle-button {
+        text-transform: uppercase;
+        position: relative;
+    }   
+
+    .list-map-toggle-button.selected::after {
         content: "";
+        position: absolute;
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+        border: 3px solid red;
+        border: 3px solid red;
+        top: -3px;
+        left: -3px; 
+    }
+
+    .view-select {
+        display: block;
     }
 
     .participant {
@@ -603,6 +677,27 @@ article input[type="email"] {
 
     [data-view="space"] .participant:not(.selected-div) {
         display: none;
+    }
+
+    [data-view="space"] .list-map-toggle-button.selected::after {
+        display: none;
+    }
+
+    [data-view="date"] .date-filter.selected-date::after {
+        content: "";
+        position: absolute;
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+        border: 3px solid red;
+        border: 3px solid red;
+        top: -3px;
+        left: -3px;
+    }
+
+    .participants.out {
+        position: absolute;
+        left: -500px;
     }
 
 }
