--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -671,6 +671,10 @@ article input[type="email"] {
         background: white;
     }
 
+    .participant:last-child {
+        padding-bottom: 100px;
+    }
+
     .participant:not(.hidden) + .show-map {
         display: block;
     }
