remove padding on program element in space view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -672,7 +672,7 @@ article input[type="email"] {
         background: white;
     }
 
-    .participant:last-child {
+    [data-view="program"] .participant:last-child {
         padding-bottom: 100px;
     }
 
